---
source: src/parser.rs
expression: ast
---
BinaryOpNode {
    op: Frac,
    left: BinaryOpNode {
        op: Plus,
        left: BinaryOpNode {
            op: Underscore,
            left: Identifier {
                name: "a",
            },
            right: Identifier {
                name: "1",
            },
        },
        right: Identifier {
            name: "b",
        },
    },
    right: BinaryOpNode {
        op: Wedge,
        left: BinaryOpNode {
            op: Underscore,
            left: Identifier {
                name: "k",
            },
            right: Identifier {
                name: "s",
            },
        },
        right: Identifier {
            name: "H",
        },
    },
}
